2004-09-24  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c
	Don't call g_strstrip on NULL (Colin Walters)

2004-09-24  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Detect and enable HAL, based on a patch from Colin Walters.

2004-09-21  Ross Burton  <ross@burtonini.com>

	* src/bacon-cd-selection.c:
	* src/cd-drive.c:
	* src/cd-drive.h:
	* src/dvd_plus_rw_utils.cpp:
	Updated from NCB.

2004-09-21  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	Use $(GCONFTOOL) instead of gconftool-2.

2004-09-21  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in: 
	* src/sound-juicer.h: 
	* src/sj-metadata-musicbrainz.c:
	Add support for changing the MusicBrainz server using a gconf
	key. Patch from William Jon McCann <mccann@jhu.edu>.

2004-09-21  Ross Burton  <ross@burtonini.com>

	* sound-juicer.spec.in:
	Add a pre-remove handler to remove the gconf schemas (Brent Fox)

2004-09-21  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c (sanitize_path):
	Add more special shell characters (Andy Hanton)

2004-09-19  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "gu" "mk" "pa" "tr" to ALL_LINGUAS.

2004-09-17  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Set the expand flag on some treeview columns.

2004-09-17  Ross Burton  <ross@burtonini.com>

	* src/sj-genres.c:
	A few more aliases.

2004-09-13  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-prefs.c:
	Stop using the deprecated GtkOptionMenu, and use GtkComboBox.

2004-09-13  Ross Burton  <ross@burtonini.com>

	* src/sj-genres.c:
	Sort the genre list.

2004-09-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Disable the genre combo when ripping.

	* src/sj-main.c:
	Reset the genre combo when the CD is changed.

2004-09-08  Ross Burton  <ross@burtonini.com>

	* src/bacon-cd-selection.c:
	* bacon-cd-selection.h:
	* cd-drive.c:
	* cd-drive.h:
	* dvd_plus_rw_utils.cpp:
	Updated from n-c-b HEAD.
