@@ -202,35 +202,35 @@ sj_genre_name (SjGenre genre)
  * The map of all genres => entry in short genre list.
  */
 GenreMap genremap[] = {
-{ACID, ACID},
+{ACID, OTHER},
 {ACID_JAZZ, JAZZ},
-{ACID_PUNK, ACID_PUNK},
+{ACID_PUNK, ROCK},
 {ALTERNATIVE, ALTERNATIVE},
-{ALTERNROCK, ALTERNROCK},
+{ALTERNROCK, ROCK},
 {AMBIENT, AMBIENT},
-{BASS, BASS},
+{BASS, DANCE},
 {BLUES, BLUES},
-{CABARET, CABARET},
+{CABARET, OTHER},
 {CHRISTIAN_RAP, RAP},
 {CLASSICAL, CLASSICAL},
 {CLASSIC_ROCK, ROCK},
 {COMEDY, OTHER},
 {COUNTRY, COUNTRY},
-{CULT, CULT},
+{CULT, OTHER},
 {DANCE, DANCE},
-{DARKWAVE, DARKWAVE},
-{DEATH_METAL, DEATH_METAL},
-{DISCO, DISCO},
-{DREAM, DREAM},
+{DARKWAVE, OTHER},
+{DEATH_METAL, ROCK},
+{DISCO, DANCE},
+{DREAM, AMBIENT},
 {ELECTRONIC, ELECTRONIC},
 {ETHNIC, ETHNIC},
-{EURODANCE, EURODANCE},
+{EURODANCE, DANCE},
 {EURO_TECHNO, DANCE},
-{FUNK, FUNK},
-{FUSION, FUSION},
-{GAME, GAME},
+{FUNK, R_AND_B},
+{FUSION, OTHER},
+{GAME, OTHER},
 {GANGSTA, RAP},
-{GOSPEL, GOSPEL},
+{GOSPEL, R_AND_B},
 {GOTHIC, ROCK},
 {GRUNGE, ROCK},
 {HARD_ROCK, ROCK},
@@ -242,45 +242,45 @@ GenreMap genremap[] = {
 {INSTRUMENTAL_ROCK, ROCK},
 {JAZZ_AND_FUNK, JAZZ},
 {JAZZ, JAZZ},
-{JUNGLE, JUNGLE},
-{LO_FI, LO_FI},
+{JUNGLE, DANCE},
+{LO_FI, DANCE},
 {MEDITATIVE, MEDITATIVE},
 {METAL, ROCK},
-{MUSICAL, MUSICAL},
-{NATIVE_AMERICAN, NATIVE_AMERICAN},
-{NEW_AGE, NEW_AGE},
-{NEW_WAVE, NEW_WAVE},
+{MUSICAL, OTHER},
+{NATIVE_AMERICAN, ETHNIC},
+{NEW_AGE, AMBIENT},
+{NEW_WAVE, AMBIENT},
 {NOISE, NOISE},
-{OLDIES, OLDIES},
+{OLDIES, OTHER},
 {OTHER, OTHER},
-{POLKA, POLKA},
+{POLKA, OTHER},
 {POP, POP},
 {POP/FUNK, FUNK},
-{POP_FOLK, POP_FOLK},
+{POP_FOLK, POP},
 {PRANKS, OTHER},
 {PSYCHADELIC, DANCE},
-{PUNK, PUNK},
+{PUNK, ROCK},
 {RAP, RAP},
 {RAVE, DANCE},
 {REGGAE, REGGAE},
-{RETRO, RETRO},
+{RETRO, OTHER},
 {ROCK, ROCK},
 {ROCK_AND_ROLL, ROCK},
 {R_AND_B, R_AND_B},
-{SHOWTUNES, SHOWTUNES},
-{SKA, SKA},
-{SOUL, SOUL},
-{SOUNDTRACK, SOUNDTRACK},
+{SHOWTUNES, OTHER},
+{SKA, REGGAE},
+{SOUL, R_AND_B},
+{SOUNDTRACK, OTHER},
 {SOUND_CLIP, OTHER},
 {SOUTHERN_ROCK, ROCK},
-{SPACE, SPACE},
-{TECHNO, TECHNO},
-{TECHNO_INDUSTRIAL, TECHNO_INDUSTRIAL},
+{SPACE, OTHER},
+{TECHNO, DANCE},
+{TECHNO_INDUSTRIAL, DANCE},
 {TOP_40, POP},
 {TRAILER, OTHER},
-{TRANCE, TRANCE},
-{TRIBAL, TRIBAL},
+{TRANCE, DANCE},
+{TRIBAL, ETHNIC},
 {TRIP_HOP, DANCE},
-{VOCAL, VOCAL},
+{VOCAL, OTHER},
 {LAST_GENRE, LAST_GENRE}
 };
