@@ -1,3 +1,8 @@
+2004-09-27  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-genres.c:
+	Yet more aliases.
+
 2004-09-24  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-metadata-musicbrainz.c
